# kiran-shell

./: .gitignore  CMakeLists.txt  README.en.md  README.md  ks-config.h.in
LICENSES/: LGPL-2.1-or-later.txt
cmake/: FindKS.cmake
data/: CMakeLists.txt  com.kylinsec.kiran.panel.gschema.xml  com.kylinsec.kiran.shell.gschema.xml  com.kylinsec.kiran.shell.menu.gschema.xml  com.kylinsec.kiran.shell.panel.gschema.xml  com.kylinsec.kiran.shell.systemtray.gschema.xml  default.layout  kiran-shell.desktop.in
data/applications-menu/: kiran-applications.menu  kiran-settings.directory
data/applications-menu/directories/: kiran-development.directory  kiran-game.directory  kiran-graphics.directory  kiran-internet.directory  kiran-multimedia.directory  kiran-office.directory  kiran-other.directory  kiran-utilities.directory
data/schemas/: com.kylinsec.kiran.shell.applet.gschema.xml  com.kylinsec.kiran.shell.gschema.xml  com.kylinsec.kiran.shell.lockdown.gschema.xml  com.kylinsec.kiran.shell.taskbar.gschema.xml
dbus/: com.kylinsec.Kiran.SessionDaemon.Appearance.xml  com.kylinsec.Kiran.SessionDaemon.Audio.Device.xml  com.kylinsec.Kiran.SessionDaemon.Audio.xml  com.kylinsec.Kiran.SessionDaemon.Power.xml  com.kylinsec.Kiran.Shell.Menu.xml  com.kylinsec.Kiran.SystemDaemon.Accounts.User.xml  com.kylinsec.Kiran.SystemDaemon.Accounts.xml  com.kylinsec.Kiran.SystemDaemon.TimeDate.xml  idle-action.h  org.freedesktop.DisplayManager.Seat.xml  org.freedesktop.UPower.Device.xml  org.freedesktop.UPower.xml  org.gnome.SessionManager.xml
include/: ks-definition.h  ks-i.h  plugin-i.h
lib/common/: CMakeLists.txt  app-launcher.cpp  app-launcher.h  applet-button.cpp  applet-button.h  common.cpp  common.h  dbus-service-watcher.cpp  dbus-service-watcher.h  define.h  desktop-helper.cpp  desktop-helper.h  logging-category.cpp  logging-category.h  notify.cpp  notify.h  setting-process.cpp  setting-process.h  tray-data-types.h  utility.cpp  utility.h  window-info-helper.cpp  window-info-helper.h  window-manager.cpp  window-manager.h
lib/waam/: app-manager.cpp  app-manager.h  app.cpp  app.h  window-manager.h
lib/widgets/: CMakeLists.txt  applet-button.cpp  applet-button.h  loading-label.cpp  loading-label.h  styled-button.cpp  styled-button.h  window-thumbnail.cpp  window-thumbnail.h  window-thumbnail.ui
plugins/: CMakeLists.txt
plugins/calendar/: CMakeLists.txt  applet.cpp  applet.h  calendar-button.cpp  calendar-button.h  calendar-widget.cpp  calendar-widget.h  calendar.json  lunar.cpp  lunar.h  window.cpp  window.h  window.ui
plugins/hwconf/: CMakeLists.txt  applet.cpp  applet.h  hw-conf-button.cpp  hw-conf-button.h  hw-conf-item.cpp  hw-conf-item.h  hw-conf-item.ui  hw-conf-window.cpp  hw-conf-window.h  hw-conf-window.ui  hwconf.json  window.cpp  window.h
plugins/menu/: CMakeLists.txt  app-item.cpp  app-item.h  app-item.ui  applet.cpp  applet.h  apps-group.cpp  apps-group.h  apps-overview.cpp  apps-overview.h  apps-overview.ui  menu.json  plugin.h  power.cpp  power.h  recent-files-overview.cpp  recent-files-overview.h  recent-files-overview.ui  styled-tree-widget.cpp  styled-tree-widget.h  window.cpp  window.h  window.ui
plugins/settingbar/: CMakeLists.txt  applet.cpp  applet.h  setting-button.cpp  setting-button.h  setting-item.cpp  setting-item.h  setting-item.ui  setting-window.cpp  setting-window.h  setting-window.ui  settingbar.json  window.cpp  window.h
plugins/settingbar/battery/: bettery-button.cpp  bettery-button.h
plugins/settingbar/brightness/: brightness.cpp  brightness.h
plugins/settingbar/net/: device-widget.cpp  device-widget.h  device-widget.ui  net-button.cpp  net-button.h  net-common.cpp  net-common.h  net-conf-item.cpp  net-conf-item.h  net-treewidget.cpp  net-treewidget.h  wired-connection-widget.cpp  wired-connection-widget.h  wired-connection-widget.ui  wired-manager.cpp  wired-manager.h  wireless-connection-widget.cpp  wireless-connection-widget.h  wireless-connection-widget.ui  wireless-manager.cpp  wireless-manager.h
plugins/settingbar/theme/: theme-conf-item.cpp  theme-conf-item.h
plugins/settingbar/volume/: volume-button.cpp  volume-button.h  volume.cpp  volume.h
plugins/showdesktop/: CMakeLists.txt  showdesktop.cpp  showdesktop.h  showdesktop.json
plugins/spacer/: CMakeLists.txt  spacer.cpp  spacer.h  spacer.json
plugins/systemtray/: CMakeLists.txt  README.md  applet.cpp  applet.h  org.kde.StatusNotifierItem.xml  status-notifier-manager.cpp  status-notifier-manager.h  status-notifier-watcher.cpp  status-notifier-watcher.h  systemtray.json  tray-data-types.cpp  tray-data-types.h  tray-extended.cpp  tray-extended.h  tray-item-proxy.cpp  tray-item-proxy.h  tray-item.cpp  tray-item.h  tray-server.cpp  tray-server.h  tray.cpp  tray.h  window-popup.cpp  window-popup.h  window.cpp  window.h
plugins/taskbar/: CMakeLists.txt  app-button-container.cpp  app-button-container.h  app-button.cpp  app-button.h  app-group.cpp  app-group.h  app-previewer.cpp  app-previewer.h  applet.cpp  applet.h  style-app-button.cpp  style-app-button.h  taskbar.json  window-previewer.cpp  window-previewer.h  window-previewer.ui  window.cpp  window.h
plugins/workspace/: CMakeLists.txt  applet.cpp  applet.h  desktop-helper.cpp  desktop-helper.h  window-previewer.cpp  window-previewer.h  window.cpp  window.h  window.ui  (+8 more)
resources/: CMakeLists.txt  resources.qrc
src/: CMakeLists.txt
src/shell/: CMakeLists.txt  applet.cpp  applet.h  layout.cpp  layout.h  line-frame.cpp  line-frame.h  line-frame.ui  main.cpp  panel-layout.cpp  panel-layout.h  panel.cpp  panel.h  plugin.cpp  plugin.h  shell.cpp  shell.h  utils.h
src/shell/profile/: layout.cpp  layout.h  profile-applet.cpp  profile-applet.h  profile-panel.cpp  profile-panel.h  profile-utils.h  profile.cpp  profile.h
src/shelld/: CMakeLists.txt  kiran-shelld.desktop  main.cpp  shelld.cpp  shelld.h  status-notifier-watcher.cpp  status-notifier-watcher.h
translations/: calendar.zh_CN.ts  hwconf.zh_CN.ts  kiran-shell.zh_CN.ts  menu.zh_CN.ts  settingbar.zh_CN.ts  showdesktop.zh_CN.ts  taskbar.zh_CN.ts  workspace.zh_CN.ts
(+36 files in other folders)
